Worked on Registration Form. Translated all fields names to Bulgarian

--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SchoolSystem.Web
 @using SchoolSystem.Web.ViewModels
+@using SchoolSystem.Web.ViewModels.Accounts
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
