--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using SchoolSystem.Common
+﻿@*@using SchoolSystem.Common
 @using SchoolSystem.Data.Models
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
@@ -31,4 +31,8 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
     }
-</ul>
+</ul>*@
+
+<ul class="navbar-nav">
+    <li class="nav-item"><a asp-controller="Accounts" asp-action="Register">Регистрация</a></li>
+ </ul>
