Worked on registration form + creation of students and teachers + validation

--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SchoolSystem.Web
 @using SchoolSystem.Web.ViewModels
 @using SchoolSystem.Web.ViewModels.Accounts
+@using SchoolSystem.Data.Models.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
