--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Accounts/Register.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Accounts/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model RegisterInputModel
 
 <form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="mb-3">
         <label asp-for="Egn"></label>
         <input asp-for="Egn" class="form-control" />
@@ -14,6 +15,14 @@
         <input asp-for="Email" class="form-control" />
         <div>
             <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="PhoneNumber"></label>
+        <input asp-for="PhoneNumber" class="form-control" />
+        <div>
+            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
     </div>
 
@@ -57,5 +66,104 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Изпрати</button>
+    <div class="mb-3">
+        <label asp-for="TeacherStudent"></label>
+        <select asp-for="TeacherStudent" class="position-dropdown form-select" asp-items="Html.GetEnumSelectList<TeacherStudent>()">
+            <option selected="selected" value="">Моля избери</option>
+        </select>
+        <div>
+            <span asp-validation-for="TeacherStudent" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="teacher-info" style="display: none">
+        <div class="mb-3">
+            <label asp-for="IsClassTeacher"></label>
+            <input type="checkbox" class="is-head-teacher" asp-for="IsClassTeacher" />
+            <div>
+                <span asp-validation-for="IsClassTeacher" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="class-name" style="display: none">
+            <div class="mb-3">
+                <label asp-for="TeacherClassId"></label>
+                <select asp-for="TeacherClassId" class="form-select" asp-items="@(new SelectList(Model.FreeClasses, "Id", "Name"))">
+                    <option selected="selected" value="">Моля избери</option>
+                </select>
+                <div>
+                    <span asp-validation-for="TeacherClassId" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="TeacherYearsOfExperience"></label>
+            <input asp-for="TeacherYearsOfExperience" class="form-control" />
+            <div>
+                <span asp-validation-for="TeacherYearsOfExperience" class="text-danger"></span>
+            </div>
+        </div>
+    </div>
+
+    <div class="student-info" style="display: none">
+        <div class="mb-3">
+            <label asp-for="StudentClassId"></label>
+            <select asp-for="StudentClassId" class="form-select" asp-items="@(new SelectList(Model.Classes, "Id", "Name"))">
+                 <option selected="selected" value="">Моля избери</option>
+            </select>
+            <div>
+                <span asp-validation-for="StudentClassId" class="text-danger"></span>
+            </div>
+        </div>
+    </div>
+
+
+
+    <button type="submit" class="btn btn-primary">Регистрация</button>
+
 </form>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+
+            $(".is-head-teacher").change(function () {
+                if ($(this).is(":checked")) {
+                    $(".class-name").fadeIn();
+                }
+                else {
+                    $(".class-name").hide();
+                    $(".class-name select").val('');
+                }
+
+            }).trigger("change");
+
+            $(".position-dropdown").change(function () {
+
+                if ($(this).val() == "0") {
+                    $(".teacher-info").hide();
+                    $(".teacher-info input#TeacherYearsOfExperience").val('');
+                    $(".teacher-info .is-head-teacher").prop("checked", false).change();
+                    $(".teacher-info select").val('');
+                    $(".student-info").fadeIn();
+                }
+                else if ($(this).val() == "1") {
+                    $(".student-info").hide();
+                    $(".student-info select").val('');
+                    $(".teacher-info").fadeIn();
+                }
+                else {
+                    $(".student-info").hide();
+                    $(".teacher-info").hide();
+
+                    $(".teacher-info input#TeacherYearsOfExperience").val('');
+                    $(".teacher-info .is-head-teacher").prop("checked", false).change();
+                    $(".teacher-info select").val('');
+
+                    $(".student-info select").val('');
+
+                }
+            }).trigger("change");
+        });
+    </script>
+}
