--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -34,5 +34,6 @@
 </ul>*@
 
 <ul class="navbar-nav">
-    <li class="nav-item"><a asp-controller="Accounts" asp-action="Register">Регистрация</a></li>
+    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Accounts" asp-action="Register">Регистрация</a></li>
+    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Accounts" asp-action="Login">Вход</a></li>
  </ul>
