Created Teacher and Student role and added the users to their corresponding role on registration

--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Accounts/Login.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Accounts/Login.cshtml
@@ -1,6 +1,12 @@
 ﻿@model LoginInputModel
 
+@{
+    this.ViewData["Title"] = "Вход";
+}
+
 <form method="post">
+
+    <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="mb-3">
         <label asp-for="Email"></label>
