--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Accounts/Register.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Accounts/Register.cshtml
@@ -1,4 +1,7 @@
 ﻿@model RegisterInputModel
+@{
+    this.ViewData["Title"] = "Регистрация";
+}
 
 <form method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
