--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Home/Index.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Home/Index.cshtml
@@ -1,9 +1,14 @@
 ﻿@using SchoolSystem.Common
+@using System.Security.Claims;
 @{
     this.ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <h1>@User.Claims.First(c => c.Type == ClaimTypes.Role).Value TBD</h1>
+    }
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
