--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@*@using SchoolSystem.Common
+﻿@using SchoolSystem.Common
 @using SchoolSystem.Data.Models
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
@@ -16,24 +16,13 @@
                 <a class="nav-link text-dark" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
             </li>
         }
-        <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>
+        <li class="nav-item"><a class="nav-link text-dark" asp-controller="Accounts" asp-action="Logout">Изход</a></li>
     }
     else
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-        </li>
+        <li class="nav-item"><a class="nav-link text-dark" asp-controller="Accounts" asp-action="Register">Регистрация</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" asp-controller="Accounts" asp-action="Login">Вход</a></li>
     }
-</ul>*@
+</ul>
 
-<ul class="navbar-nav">
-    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Accounts" asp-action="Register">Регистрация</a></li>
-    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Accounts" asp-action="Login">Вход</a></li>
- </ul>
+
