--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_Layout.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_Layout.cshtml
@@ -22,9 +22,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
-                        </li>
+                        @if (this.User.IsInRole(GlobalConstants.Teacher.TeacherRoleName))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="Overview">Предмети</a>
+                            </li>
+                        }
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
