--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using SchoolSystem.Web.ViewModels
 @using SchoolSystem.Web.ViewModels.Accounts
 @using SchoolSystem.Web.ViewModels.Subjects
+@using SchoolSystem.Web.ViewModels.Grades
+@using SchoolSystem.Web.ViewModels.Classes
 @using SchoolSystem.Data.Models.Enums
 @using SchoolSystem.Web.WebModels
 @using SchoolSystem.Common
