Worked on quizzes

--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using SchoolSystem.Web.ViewModels.Subjects
 @using SchoolSystem.Web.ViewModels.Grades
 @using SchoolSystem.Web.ViewModels.Classes
+@using SchoolSystem.Web.ViewModels.Quizzes
 @using SchoolSystem.Data.Models.Enums
 @using SchoolSystem.Web.WebModels
 @using SchoolSystem.Common
