--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_Layout.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Shared/_Layout.cshtml
@@ -87,6 +87,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
     <script src="~/js/jquery.datetimepicker.full.min.js"></script>
+    <script src="~/js/check-at-least-one-validation.js"></script>
     @await this.RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
