--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Quizzes/Mine.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Quizzes/Mine.cshtml
@@ -14,7 +14,7 @@
         @foreach (var quiz in Model)
         {
 
-            <div class="card col-lg-4 col-md-3 col-sm-2" style="margin-right: 10px;">
+            <div class="card col-lg-4 col-md-3 col-sm-2" style="margin: 10px;">
                 <div class="card-body">
                     <h5 class="card-title">@quiz.Name</h5>
                     <ul style="font-size: 14px;" class="fst-italic">
