--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using SchoolSystem.Data.Models.Enums
 @using SchoolSystem.Web.WebModels
 @using SchoolSystem.Common
+@using SchoolSystem.Web.ViewModels.Quizzes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SchoolSystem.Web
