--- a/src/SchoolSystem/Web/SchoolSystem.Web/Views/Quizzes/Take.cshtml
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/Views/Quizzes/Take.cshtml
@@ -2,9 +2,8 @@
 
 <p id="demo"></p>
 
-@Html.Raw(Model.Content)
+<vc:questions-form model="Model.Questions"></vc:questions-form>
 
-<button class="btn btn-primary submit-exam">Завърши изпит</button>
 
 @section Scripts {
     <script>
@@ -36,83 +35,60 @@
 
             if (distance < 0) {
                 clearInterval(x);
-                $(".submit-exam").click();
+                //$(".submit-exam").click();
             }
         }, 1000);
     </script>
 
     <script>
-        $(document).ready(function () {
-            $(".submit-exam").click(function (e) {
-                let answers = [];
-                e.preventDefault();
-                let questions = $(".quizlib-question");
+        $("header").hide();
+        $("body").css('background-color', '#dae0e3');
+        $("footer").hide();
 
-                for (let i = 0; i < questions.length; i++) {
-                    let questionType = '';
-                    if (questions.eq(i).find("input:radio").length > 0) {
-                        questionType = "radio";
-                    }
-                    else if (questions.eq(i).find("input:checkbox").length > 0) {
-                        questionType = "checkbox";
-                    }
-                    else {
-                        questionType = "text";
-                    }
-                    let questionNumber = (i + 1).toString();
-                    let oeResponse = questions.eq(i).find("input:text");
-                    let selectedOptions = questions.eq(i).find("input:checked");
-                    if (oeResponse.length === 0) {
-                        if (selectedOptions.length > 0) {
-                            selectedOptions.each(function (index) {
-                                let currentVal = selectedOptions.eq(index).val();
-                                if (index == 0) {
-                                    answers.push({ question: questionNumber, questionType: questionType, answers: [currentVal] });
-                                }
-                                else {
-                                    answers[answers.length - 1]["answers"].push(currentVal);
-                                }
-                            });
-                        }
-                        else {
-                            answers.push({ question: questionNumber, questionType: questionType, answers: [] });
-                        }
-                    }
-                    else {
-                        if (oeResponse.val() !== '') {
-                            answers.push({ question: questionNumber, questionType: questionType, answers: [oeResponse.val()] })
-                        }
-                        else {
-                            answers.push({ question: questionNumber, questionType: questionType, answers: [] })
-                        }
-                        
-                    }
-
-
+        $(".prev-question").click(function (e) {
+            e.preventDefault();
+            let currentQuestion = $(".question:not(.d-none)");
+            let previousQuestion = currentQuestion.prev();
+            if (previousQuestion.length == 1) {
+                currentQuestion.addClass("d-none");
+                previousQuestion.removeClass("d-none");
+                $(".next-question").removeClass("disabled");
+                if (previousQuestion.attr("id").split("-")[1] == "1") {
+                    $(this).addClass("disabled");
                 }
+                else {
+                    $(this).removeClass("disabled");
+                }
+                
+            }
+        });
 
-                $.ajax({
-                    url: `/api/results`,
-                    type: "POST",
-                    contentType: "application/json",
-                    dataType: "json",
-                    data: JSON.stringify({QuizId: "@Model.Id", StudentId: @Model.StudentId, AnswersViewModel: answers }),
-                    success: function (data) {
-                        if (data.answers.some(a => a.questionType == "text")) {
-                            $("body").html(`<h2>Вие успешно предадохте теста и ще получите известие, когато е проверен от учител.</h2>`);
-                        }
-                        else {
-                            $("body").html(`<h2>Вие успешно предадохте теста!</h2>
-                                                                    <h3>Резултат: ${data.points} Точки</h3>`);
-                        }
-                    },
-                    error: function(xhr, status, error) {
-                        console.log(xhr);
-                        console.log(status);
-                    }
-                });
+        $(".next-question").click(function (e) {
+            e.preventDefault();
+            let currentQuestion = $(".question:not(.d-none)");
+            let nextQuestion = currentQuestion.next();
+            if (nextQuestion.length == 1) {
+                currentQuestion.addClass("d-none");
+                nextQuestion.removeClass("d-none");
+                $(".prev-question").removeClass("disabled");
+                if (nextQuestion.is(".question:last")) {
+                    $(this).addClass("disabled");
+                }
+                else {
+                    $(this).removeClass("disabled");
+                }
+            }
+        });
 
-            });
+        $("input:radio").change(function () {
+            let radio = this;
+            if ($(radio).is(":checked")) {
+                $(radio).next().attr("value", "True");
+                $(radio).closest(".answers").find("input:hidden").not($(radio).next()).each(function () {
+                    $(this).attr("value", "False");
+                })
+            }
         });
     </script>
+
 }
