--- a/src/SchoolSystem/Web/SchoolSystem.Web/wwwroot/css/site.css
+++ b/src/SchoolSystem/Web/SchoolSystem.Web/wwwroot/css/site.css
@@ -72,3 +72,21 @@ body {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
+
+.questions {
+    background-color: white;
+    padding: 10px;
+    border: 1px solid;
+    box-shadow: 5px 10px 8px #888888;
+    margin-bottom: 20px;
+}
+.buttons {
+   display: flex;
+   justify-content: space-between;
+   margin-bottom: 10px;
+}
+
+.question-form {
+
+}
+
